--- a/index.html
+++ b/index.html
@@ -89,6 +89,26 @@
                                         <a href="#" class="link_2">more about me</a>
                                     </div>
                                 </div>
+                                <div class="s_links">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                            <p>fa.</p>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="fab fa-twitter"></i></a>
+                                            <p>tw.</p>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                            <p>li.</p>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="fab fa-instagram"></i></a>
+                                            <p>in.</p>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6 px-0">
@@ -117,10 +137,8 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="mouse"></div>
                     </div>
-                    <!-- <div class="links">
-
-                    </div> -->
                 </div>
             </section>
         </header>
